--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,48 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+}
+
+.gallery {
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  width: 1128px;
+}
+
+.gallery-item {
+  list-style: none;
+  flex-basis: calc((1128px - 48px) / 3);
+  height: 200px;
+}
+
+.gallery-link {
+  cursor: zoom-in;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.modal img {
+  width: 1112px;
+  height: 640px;
+  object-fit: cover;
+}
+
+.basicLightbox--visible {
+  background-color: rgba(46, 47, 66, 0.8);
+}
