--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,6 +25,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background-color: #f5f5f5;
+  
 }
 
 .gallery {
@@ -56,8 +57,74 @@ body {
   width: 1112px;
   height: 640px;
   object-fit: cover;
+  
 }
 
 .basicLightbox--visible {
-  background-color: rgba(46, 47, 66, 0.8);
+  background: rgba(46, 47, 66, 0.8);
+}
+
+.input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding-left: 16px;
+    resize: none;
+}
+
+.input:hover   {
+  border: 1px solid #000;
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 24px;
+}
+
+.label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: flex-start;
+}
+
+.button {
+  display: block;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background-color: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+
+  /* line-height: 24px; */
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  margin-top: 16px;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #6c8cff;
 }
